fix: scrollbar gutter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,3 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f9f9f9;
 }
-
-html {
-  scrollbar-gutter: unset !important;
-}
-
-.modal {
-  padding: 0 !important;
-}
